# demultiplexing_prefect

./: .gitignore  README.md  cli.py  contamination.py  demux.py  models.py  pipeline.py  pixi.toml  prefect.yaml  pyproject.toml  qc.py  run.py  run.sh  run.sh.j2  run_qc_smoke_test.py  template_config.yaml
demux_pipeline/: README.md  __init__.py  cli.py  contamination.py  demux.py  models.py  multiqc_config.yaml  observability.py  pipeline.py  process.py  qc.py
test/: conftest.py  run_qc_smoke_test.py  test_cli_multi_tools.py  test_contamination_dispatch.py  test_models.py  test_observability_events.py  test_process.py  test_project_layout.py  test_qc_only_smoke.py  test_template_demux_prefect.py
test/demux/: test_demux.py
